Bug 1553969 - Do not disable WebRender at ImageBridgeChild when gecko uses WebRender r=nical a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D33753

--HG--
extra : source : 2d88330b1f3c2bf07030c576c7f5c534b4f2cc80